# tgate

./: .gitignore  CMakeLists.txt
source/: main.cc
source/core/: CMakeLists.txt  connection_manager.cc  connection_manager.h  tgate.cc  tgate.h
source/fastcgi/: CMakeLists.txt  fastcgi.cc  fastcgi.h
source/foundation/: CMakeLists.txt  foundation.h  net.h
source/foundation/impl/: copyable.h  interface.h  noncopyable.h  stdext.h
source/http/: CMakeLists.txt  http_base.cc  http_base.h  http_constants.h  http_request.cc  http_request.h  http_request_parser.cc  http_request_parser.h  http_response.cc  http_response.h
test/core/: CMakeLists.txt  connection_manager_test.cc
test/fastcgi/: CMakeLists.txt  fastcgi_test.cc
test/http/: CMakeLists.txt  http_base_test.cc  http_request_test.cc
